@@ -9,7 +9,7 @@
 <title>
 GCC 10 Release Series &mdash; Changes, New Features, and Fixes
 - GNU Project - Free Software Foundation (FSF)</title>
-<link rel="stylesheet" type="text/css" href="https://gcc.gnu.org/gcc.css" />
+<link rel="stylesheet" type="text/css" href="gcc.css" />
    </head>
  
 
