@@ -16,6 +16,7 @@ gcc-10 (10.1.0-2) UNRELEASED; urgency=medium
   * Update debian/TODO, remove obsolete items, add some testsuite items.
   * Override some lintian warnings for snapshot builds.
   * Include jit test results into the summary and the gcc-test-results package.
+  * Fix some lintian warnings.
 
   [ Nicolas Boulenguez ]
   * Enable gnat autopkg tests.
